--- a/Assignment8/css/style.css
+++ b/Assignment8/css/style.css
@@ -4,23 +4,42 @@ This is the style file for this project.
 
 **********************************************/
 
+@font-face {
+  font-family: Champagne;
+  src: url(../assets/fonts/Champagne.ttf);
+}
+
+@font-face {
+  font-family: Happy;
+  src: url(../assets/fonts/Happy.ttf);
+}
+
 /* Blog CSS taken from https://www.w3schools.com/howto/howto_css_blog_layout.asp */
 * {
   box-sizing: border-box;
 }
 /* Add a gray background color with some padding */
 body {
-  font-family: Arial;
+  font-family: Champagne;
   padding: 20px;
-  background: #f1f1f1;
+  background-color: #F8BDC4;
+  font-size: 20px;
+  color: #636363;
 }
+
+h1 {
+  font-family: Happy;
+}
+
 img {
   width: 100%;
   height: auto;
 }
+
 /* Header/Blog Title */
 .header {
-  padding: 30px;
+  font-family: Happy;
+  padding: 10px;
   font-size: 40px;
   text-align: center;
   background: white;
@@ -38,11 +57,18 @@ img {
   padding-left: 20px;
 }
 /* Fake image */
-.blogImg, .flickrImg {
-  background-color: #aaa;
+.blogImg, .flickrImg, .aboutImg {
   width: 100%;
   padding: 20px;
   height: auto;
+  border-style: dashed;
+  border-color: #8D7471;
+}
+.title {
+  padding-left: 20px;
+}
+p {
+  padding-left: 20px;
 }
 /* Add a card effect for articles */
 .card {
@@ -60,7 +86,7 @@ img {
 .footer {
   padding: 20px;
   text-align: center;
-  background: #ddd;
+  background: white;
   margin-top: 20px;
 }
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
@@ -78,13 +104,71 @@ img {
 }
 
 #button {
-background-color: #777;
+background-color: #796465;
 color: white;
 cursor: pointer;
-padding: 8px;
+padding: 8px 5px;
 width: 95px;
 border: none;
 text-align: left;
 outline: none;
-font-size: 15px;
+font-size: 20px;
+font-family: Champagne;
+margin-left: 20px;
+}
+
+/* Popup CSS from https://www.thepolyglotdeveloper.com/2018/02/create-email-subscription-popup-jquery/ */
+#list-builder {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+    filter: alpha(opacity=80);
+	opacity: 0.8;
+    display: none;
+}
+
+#popup-box {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #d4a3a9;
+    color: #FFFFFF;
+    width: 90%;
+    max-width: 600px;
+    padding: 30px;
+    border: 10px solid #FFFFFF;
+    display: none;
+}
+
+#popup-close {
+    position: absolute;
+    top: -25px;
+    right: -25px;
+    cursor: pointer;
+    width: 40px;
+}
+
+#popup-box h1 {
+    margin: 0;
+}
+
+#popup-box form {
+    margin-bottom: 0px;
+}
+
+#popup-box input {
+    padding: 10px;
+    border: 1px solid #796465;
+    width: 40%;
+}
+
+#popup-box button {
+    padding: 10px;
+    color: white;
+    border: 1px solid #796465;
+    background-color: #796465;
 }
